# symptom-diagnosis-explorer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.ai/specs/1-dspy/: goal.md  plan.md  research.md
.ai/specs/9-langchain/: diary.md  plan.md  research.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
docs/: claude-github-actions.md
notebooks/projects/1-dspy/experiments/: 2025-10-26-initial-pipeline.ipynb
notebooks/projects/9-langchain/experiments/: 2025-11-11-framework-comparison.ipynb  2025-11-11-langchain-pipeline.ipynb  2025-11-11-pydantic-ai-pipeline.ipynb
projects/: README.md
projects/1-dspy/experiments/: 2025-10-26-initial-pipeline.ipynb
src/symptom_diagnosis_explorer/: cli.py
src/symptom_diagnosis_explorer/commands/: __init__.py
src/symptom_diagnosis_explorer/commands/classify/: __init__.py  evaluate.py  list_models.py  tune.py
src/symptom_diagnosis_explorer/commands/dataset/: __init__.py  list.py  summary.py
src/symptom_diagnosis_explorer/models/: __init__.py  dataset.py  diagnosis.py  domain.py  model_development.py
src/symptom_diagnosis_explorer/services/: __init__.py  dataset.py  model_development.py
src/symptom_diagnosis_explorer/services/ml_models/: __init__.py  base.py  dspy.py  langchain.py  pydantic_ai.py  registry.py
tests/: __init__.py
tests/integration/: conftest.py
tests/integration/services/: test_dataset.py  test_model_development.py
tests/integration/services/ml_models/: __init__.py  test_dspy_integration.py  test_langchain_integration.py  test_pydantic_ai_integration.py
